@@ -82,7 +82,8 @@ Bug Fixes:
     never correctly parsed to 'on' state (Juha Lindfors, ORCJAVA-326)
   - Fix a false warning in ISY-99 protocol implementation (ORCJAVA-308)
   - 1-wire: Fix NPE when owserver is not reachable (Marcus Redeker, ORCJAVA-267)
-
+  - KNX SCENE and LEARN_SCENE commands were mixed up. Enable scene number
+    to be used with level sensors (Marcus Redeker, ORCJAVA-282)
 
 
 Internal:
